crates/forge_provider/src/open_router/snapshots/forge_provider__open_router__request__tests__tool_message_conversion.snap
---
source: crates/forge_provider/src/open_router/request.rs
expression: router_message
---
{
  "role": "tool",
  "content": "---\nname: test_tool\ncall_id: 123\nstatus: success\n---\n{\n               \"user\": \"John\",\n               \"age\": 30,\n               \"address\": [{\"city\": \"New York\"}, {\"city\": \"San Francisco\"}]\n            }",
  "name": "test_tool",
  "tool_call_id": "123"
}
