crates/forge_provider/src/open_router/snapshots/forge_provider__open_router__request__tests__tool_message_typescript_code.snap
---
source: crates/forge_provider/src/open_router/request.rs
expression: router_message
---
{
  "role": "tool",
  "content": "---\nname: rust_tool\ncall_id: 456\nstatus: success\n---\n{ \"code\": \"fn main<T>(gt: T) {let b = &gt; }\"}",
  "name": "rust_tool",
  "tool_call_id": "456"
}
